
[TestGenerate/no_imports - 1]
// Code generated by github.com/utgwkk/gosimplectorgen. DO NOT EDIT.

package testpkg

func NewPoint(
    x int,
    y int,
) *point {
    return &point{
        x: x,
        y: y,
    }
}

---

[TestGenerate/with_imports - 1]
// Code generated by github.com/utgwkk/gosimplectorgen. DO NOT EDIT.

package testpkg

import (
    "example.com/bar"
    "example.com/foo"
)

func NewMyStruct(
    a foo.Foo,
    b bar.Bar,
) *myStruct {
    return &myStruct{
        a: a,
        b: b,
    }
}

---

[TestGenerate/filter_types - 1]
// Code generated by github.com/utgwkk/gosimplectorgen. DO NOT EDIT.

package testpkg

func NewFoo(
    x int,
) *foo {
    return &foo{
        x: x,
    }
}

func NewBaz(
    z float64,
) *baz {
    return &baz{
        z: z,
    }
}

---

[TestGenerate/unused_imports_removed - 1]
// Code generated by github.com/utgwkk/gosimplectorgen. DO NOT EDIT.

package testpkg

import (
    "example.com/bar"
    "example.com/foo"
)

func NewMyStruct(
    a foo.Foo,
    b bar.Bar,
) *myStruct {
    return &myStruct{
        a: a,
        b: b,
    }
}

---

[TestGenerate/with_generic_fields - 1]
// Code generated by github.com/utgwkk/gosimplectorgen. DO NOT EDIT.

package testpkg

import (
    "example.com/optional"
    "example.com/result"
)

func NewMyStruct(
    a optional.Optional[string],
    b result.Result[int, error],
) *myStruct {
    return &myStruct{
        a: a,
        b: b,
    }
}

---
